I4: Temporarily fix image flicker

--- a/Frontend/src/app/pages/home/home.page.scss
+++ b/Frontend/src/app/pages/home/home.page.scss
@@ -41,3 +41,7 @@ ion-thumbnail {
 .big-icon {
   color: rgb(50,50,50);
 }
+
+.invisible {
+  visibility: hidden;
+}
